apps/mcp/mcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcpgateway
  namespace: mcp
spec:
  selector:
    app: mcp-gateway
  ports:
    - protocol: TCP
      port: 8811
      targetPort: 8811
